--- a/css/Homepage.css
+++ b/css/Homepage.css
@@ -163,6 +163,9 @@
   align-items: start;
   gap: 1rem;
 }
+#hidden-robot{
+  display: none;
+}
 .big {
   width: 100%;
   height: 100%;
@@ -869,6 +872,15 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 5rem;
+  }
+  #hidden-robot{
+    display: block;
+    width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 1rem;
   }
 }
 @media screen and (max-width: 689px) {
