--- a/css/marketplace.css
+++ b/css/marketplace.css
@@ -78,6 +78,7 @@ body > hr{
   border-bottom: 2px solid #858584;
   padding-bottom: 1.5rem;
   cursor: pointer;
+  transition: 0.5s;
 }
 .left-all-collection h1{
   font-size: 22px;
@@ -99,6 +100,7 @@ body > hr{
   gap: 1rem;
   padding-bottom: 1.5rem;
   cursor: pointer;
+  transition: 0.5s;
 }
 .right-all-collection h1{
   font-size: 22px;
