--- a/css/style.css
+++ b/css/style.css
@@ -193,8 +193,8 @@ header {
   gap: 1.2rem;
 }
 .error {
-  width: 25px;
-  height: 25px;
+  width: 21px;
+  height: 21px;
   margin-right: 0.5rem;
   display: none;
 }
@@ -437,6 +437,7 @@ footer p {
     padding-bottom: 3rem;
   }
   .Right-Sign-up {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -447,6 +448,11 @@ footer p {
   }
   .Right-Sign-up p {
     text-align: center;
+  }
+  .input-part {
+    width: 100%;
+    gap: 0.5rem;
+    padding: 0 1.5rem;
   }
 }
 @media screen and (max-width: 787px) {
