--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,9 @@
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
 }
-
+html{
+  scrollbar-width: none;
+}
 body {
   background-color: #2b2b2b; 
 }
@@ -225,7 +227,7 @@ header {
   outline: none;
   width: 100%;
 }
-.input-part button {
+#Cbutton,#Sbutton {
   width: 100%;
   background-color: #a259ff;
   color: white;
@@ -236,7 +238,8 @@ header {
   outline: none;
   margin-top: 1.5rem;
 }
-.input-part button:active {
+#Cbutton:active,
+#Sbutton:active {
   background-color: black;
 }
 footer {
