--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,15 @@ header {
   padding: 1rem 1.5rem;
   border-radius: 1.5rem;
   border: none;
-}
-.header-button a {
+  text-decoration: none;
   color: white;
   font-size: 18px;
+  cursor: pointer;
+}
+.header-button a{
   text-decoration: none;
+  color: white;
+  font-size: 18px;
 }
 /* HAMBURGER MENU */
 .hamburger-menu {
@@ -470,8 +474,7 @@ footer p {
   }
   .input-part {
     width: 100%;
-    gap: 1rem;
-    padding: 0 1.5rem;
+    padding: 0;
   }
   .input {
     width: 100%;
@@ -523,9 +526,6 @@ footer p {
   .Right-Sign-up p {
     font-size: 15px;
   }
-  .input-part{
-    padding: 0 0.5rem;
-  } 
   header {
     padding: 0.5rem;
   }
